Add API key info to documentation
